--- a/app/src/main/res/drawable/selector_loudness_switch.xml
+++ b/app/src/main/res/drawable/selector_loudness_switch.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/ic_loudness_open"/>
-    <item android:drawable="@drawable/ic_loudness_close"/>
+    <item android:state_checked="true">
+        <shape>
+            <gradient android:angle="90" android:startColor="#40b9fb" android:endColor="#045ac4"/>
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <solid android:color="#000000"/>
+            <stroke android:color="#5E5F5F" android:width="1dp"/>
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
 </selector>
