--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dsp_sound_fragment_ball_layout_width">360dp</dimen>
+    <dimen name="dsp_sound_fragment_ball_layout_height">360dp</dimen>
 
     <dimen name="arrow_padding">20dp</dimen>
 
