--- a/app/src/main/res/layout/fragment_sound.xml
+++ b/app/src/main/res/layout/fragment_sound.xml
@@ -430,7 +430,7 @@
         android:gravity="center"
         android:textColor="#ffffffff"
         android:textSize="16sp"
-        android:text="恢复默认"
+        android:text="@string/reset_default"
         app:layout_constraintEnd_toEndOf="@+id/layout_tab"
         app:layout_constraintTop_toBottomOf="@+id/layout_tab">
     </TextView>
