--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="dsp_sound_fragment_ball_layout_height">360dp</dimen>
 
     <dimen name="arrow_padding">20dp</dimen>
+    <dimen name="wave_height">210dp</dimen>
 
 </resources>
