--- a/app/src/main/res/values-sw720dp/styles.xml
+++ b/app/src/main/res/values-sw720dp/styles.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="dsp_seekBar_parent_view_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">250dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
     <style name="dsp_seekBar_parent_view_style2">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">350dp</item>
+        <item name="android:layout_height">300dp</item>
         <item name="android:layout_marginTop">10dp</item>
     </style>
 </resources>
