--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,13 +35,19 @@
         <item name="android:maxHeight">12dp</item>
         <item name="android:minHeight">12dp</item>
         <item name="android:max">28</item>
-        <item name="android:padding">14dp</item>
+        <item name="android:padding">10dp</item>
         <item name="seekBarRotation">CW270</item>
+    </style>
+
+    <style name="dsp_seekBar_parent_view_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">210dp</item>
+        <item name="android:layout_marginTop">10dp</item>
     </style>
 
     <style name="dsp_seekBar_parent_view_style2">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">280dp</item>
+        <item name="android:layout_height">250dp</item>
         <item name="android:layout_marginTop">10dp</item>
     </style>
 
